# nos

./: Changelog.md
.circleci/: config.yml
cmake/: EthUtils.cmake
docs/: using-the-compiler.rst  yul.rst
docs/contracts/: using-for.rst
docs/grammar/: SolidityLexer.g4  SolidityParser.g4
libevmasm/: Assembly.h  PeepholeOptimiser.cpp
libsolc/: CMakeLists.txt  libsolc.cpp  libsolc.h
libsolidity/analysis/: DeclarationTypeChecker.cpp  SyntaxChecker.cpp  TypeChecker.cpp
libsolidity/ast/: AST.cpp  AST.h  ASTJsonConverter.cpp  ASTJsonImporter.cpp  ASTUtils.h  AST_accept.h  TypeProvider.cpp  Types.cpp  Types.h
libsolidity/codegen/: ExpressionCompiler.cpp
libsolidity/codegen/ir/: IRGeneratorForStatements.cpp
libsolidity/formal/: CHC.cpp  SMTEncoder.cpp  SMTEncoder.h  SymbolicState.cpp  SymbolicTypes.cpp
libsolidity/interface/: CompilerStack.cpp  OptimiserSettings.h  StandardCompiler.cpp
libsolidity/lsp/: FileRepository.h  GotoDefinition.cpp  LanguageServer.cpp  LanguageServer.h  Transport.h  Utils.cpp  Utils.h
libsolidity/parsing/: Parser.cpp
libyul/: AssemblyStack.cpp
libyul/backends/evm/: ControlFlowGraph.h  ControlFlowGraphBuilder.cpp  OptimizedEVMCodeTransform.cpp  StackLayoutGenerator.cpp
libyul/optimiser/: FullInliner.cpp  UnusedStoreEliminator.cpp
scripts/: ImportExportTest.sh
solc/: CommandLineInterface.cpp  CommandLineParser.cpp
test/: localeTest.sh  lsp.py
test/externalTests/: bleeps.sh  elementfi.sh
test/libevmasm/: Assembler.cpp
test/libyul/: StackLayoutGeneratorTest.cpp
test/solc/: CommandLineParser.cpp
(+184 files in other folders)
